--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,11 +1,16 @@
 !!!
 %html
   %head
-    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{content: 'text/html; charset=UTF-8', 'http-equiv': 'Content-Type'}
+    %meta{charset: 'utf-8'}
+    %meta{content: 'IE=edge', 'http-equiv': 'X-UA-Compatible'}
+    %meta{content: 'Glitz n Glam E-commerce shop', name: 'description'}
+    %meta{content: 'width=device-width, initial-scale=1', name: 'viewport'}
     %title Glitzglam
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
   %body
+    = render 'navigation/navbar'
     = yield
