--- a/app/views/navigation/_navbar.html.haml
+++ b/app/views/navigation/_navbar.html.haml
@@ -11,7 +11,7 @@
             %li
               %a{:href => "#"} home
             %li
-              %a{:href => "#"} shop
+              = link_to 'shop', products_path
             %li
               %a{:href => "#"} promotion
             %li
@@ -55,7 +55,7 @@
       %li.menu_item
         %a{:href => "#"} home
       %li.menu_item
-        %a{:href => "#"} shop
+        = link_to 'shop', products_path
       %li.menu_item
         %a{:href => "#"} promotion
       %li.menu_item
